syntax = "proto2";

import "scalapb/scalapb.proto";
package nl.amony.service.resources.api.meta;

message ResourceMeta {
  oneof sealed_value {
    VideoMeta video = 1;
    ImageMeta image = 2;
  }
}

message VideoMeta {
  required string contentType = 1;
  required int32 width = 2;
  required int32 height = 3;
  required float fps = 4;
  required int64 durationInMillis = 5;
  map<string, string> metaData = 6;
}

message ImageMeta {
  required string contentType = 1;
  required int32 width = 2;
  required int32 height = 3;
  map<string, string> metaData = 4;
}